# ev-charge-planner

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: test.yml  validate.yml
custom_components/ev_charge_planner/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  datetime.py  entity.py  manifest.json  models.py  number.py  planner.py  select.py  sensor.py  strings.json  switch.py  time.py
custom_components/ev_charge_planner/translations/: da.json  en.json
tests/: test_planner.py
